--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
-name = "hello-rocket"
+name = "pinger"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rocket = "0.5.0-rc.2"
+tokio = { version = "1", features = ["full"] }
+warp = "0.3.3"
