--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,5 @@ pulumi-gcp>=6.0.0,<7.0.0
 pulumi-docker>=3.0.0,<4.0.0
 pulumi-azure-native>=1.0.0,<2.0.0
 aiohttp==3.8.3
+pulumi-awsx>=1.0.0,<2.0.0
+pulumi-aws>=5.0.0,<6.0.0
