--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -6,9 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+lambda-web = { version = "0.2.0", features = ["hyper"], optional = true }
 tokio = { version = "1", features = ["full"] }
 warp = "0.3.3"
 
 [features]
 gcp = []
 azure = []
+aws = ["lambda-web"]
