--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -7,8 +7,11 @@ edition = "2021"
 
 [dependencies]
 lambda-web = { version = "0.2.1", features = ["hyper"], optional = true }
+reqwest = { version = "0.11.17", features = ["rustls-tls-webpki-roots", "trust-dns"], default-features = false }
 tokio = { version = "1", features = ["full"] }
 warp = "0.3.4"
+serde = {version = "1.0", features = ["derive"] }
+
 
 [features]
 gcp = []
