Switch to using pulumi-containerregistry and put gcp images in all regions

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,5 @@ pulumi-google-native<1.0.0
 pulumi-docker>=3.0.0,<4.0.0
 pulumi-azure-native>=1.0.0,<2.0.0
 pulumi-aws>=5.0.0,<6.0.0
+pulumi-containerregistry<1.0.0
 git+https://github.com/rhysmdnz/pulumi-alicloud@v0.0.2#egg=pulumi-alicloud&subdirectory=sdk/python
