--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -6,15 +6,19 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-lambda-web = { version = "0.2.1", features = ["hyper"], optional = true }
-reqwest = { version = "0.11.25", features = ["rustls-tls-webpki-roots", "trust-dns"], default-features = false }
+reqwest = { version = "0.12.2", features = [
+    "http2",
+    "rustls-tls-webpki-roots",
+    "hickory-dns",
+    "charset",
+], default-features = false }
 tokio = { version = "1", features = ["full"] }
 warp = "0.3.6"
-serde = {version = "1.0", features = ["derive"] }
+serde = { version = "1.0", features = ["derive"] }
 
 
 [features]
 gcp = []
 alicloud = []
 azure = []
-aws = ["lambda-web"]
+aws = []
